Refatoração da resposta de erro para enviar apenas o status, timestamp e message